@@ -1,37 +1,22 @@
 package camp;
 
-import camp.model.Score;
-import camp.model.Student;
-import camp.model.Subject;
+import camp.model.*;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Scanner;
+import java.util.*;
+import java.util.stream.Collectors;
 
-/**
- * Notification
- * Java, 객체지향이 아직 익숙하지 않은 분들은 위한 소스코드 틀입니다.
- * main 메서드를 실행하면 프로그램이 실행됩니다.
- * model 의 클래스들과 아래 (// 기능 구현...) 주석 부분을 완성해주세요!
- * 프로젝트 구조를 변경하거나 기능을 추가해도 괜찮습니다!
- * 구현에 도움을 주기위한 Base 프로젝트입니다. 자유롭게 이용해주세요!
- */
 public class CampManagementApplication {
     // 데이터 저장소
-    private static List<Student> studentStore;
-    private static List<Subject> subjectStore;
-    private static List<Score> scoreStore;
-
-    // 과목 타입
-    private static String SUBJECT_TYPE_MANDATORY = "MANDATORY";
-    private static String SUBJECT_TYPE_CHOICE = "CHOICE";
+    private static List<Student> studentStore = new ArrayList<>();
+    private static List<Subject> subjectStore = new ArrayList<>();
+    private static List<Score> scoreStore = new ArrayList<>();
 
     // index 관리 필드
-    private static int studentIndex;
+    private static int studentIndex = 0;
     private static final String INDEX_TYPE_STUDENT = "ST";
-    private static int subjectIndex;
+    private static int subjectIndex = 0;
     private static final String INDEX_TYPE_SUBJECT = "SU";
-    private static int scoreIndex;
+    private static int scoreIndex = 0;
     private static final String INDEX_TYPE_SCORE = "SC";
 
     // 스캐너
@@ -48,55 +33,53 @@ public class CampManagementApplication {
 
     // 초기 데이터 생성
     private static void setInitData() {
-        studentStore = new ArrayList<>();
-        subjectStore = List.of(
+        subjectStore = new ArrayList<>(Arrays.asList(
                 new Subject(
                         sequence(INDEX_TYPE_SUBJECT),
                         "Java",
-                        SUBJECT_TYPE_MANDATORY
+                        SubjectType.MANDATORY
                 ),
                 new Subject(
                         sequence(INDEX_TYPE_SUBJECT),
                         "객체지향",
-                        SUBJECT_TYPE_MANDATORY
+                        SubjectType.MANDATORY
                 ),
                 new Subject(
                         sequence(INDEX_TYPE_SUBJECT),
                         "Spring",
-                        SUBJECT_TYPE_MANDATORY
+                        SubjectType.MANDATORY
                 ),
                 new Subject(
                         sequence(INDEX_TYPE_SUBJECT),
                         "JPA",
-                        SUBJECT_TYPE_MANDATORY
+                        SubjectType.MANDATORY
                 ),
                 new Subject(
                         sequence(INDEX_TYPE_SUBJECT),
                         "MySQL",
-                        SUBJECT_TYPE_MANDATORY
+                        SubjectType.MANDATORY
                 ),
                 new Subject(
                         sequence(INDEX_TYPE_SUBJECT),
                         "디자인 패턴",
-                        SUBJECT_TYPE_CHOICE
+                        SubjectType.CHOICE
                 ),
                 new Subject(
                         sequence(INDEX_TYPE_SUBJECT),
                         "Spring Security",
-                        SUBJECT_TYPE_CHOICE
+                        SubjectType.CHOICE
                 ),
                 new Subject(
                         sequence(INDEX_TYPE_SUBJECT),
                         "Redis",
-                        SUBJECT_TYPE_CHOICE
+                        SubjectType.CHOICE
                 ),
                 new Subject(
                         sequence(INDEX_TYPE_SUBJECT),
                         "MongoDB",
-                        SUBJECT_TYPE_CHOICE
-                )
+                        SubjectType.CHOICE
+                ))
         );
-        scoreStore = new ArrayList<>();
     }
 
     // index 자동 증가
@@ -124,14 +107,16 @@ public class CampManagementApplication {
             System.out.println("내일배움캠프 수강생 관리 프로그램 실행 중...");
             System.out.println("1. 수강생 관리");
             System.out.println("2. 점수 관리");
-            System.out.println("3. 프로그램 종료");
+            System.out.println("3. 수강생 상태 관리");
+            System.out.println("4. 프로그램 종료");
             System.out.print("관리 항목을 선택하세요...");
             int input = sc.nextInt();
 
             switch (input) {
                 case 1 -> displayStudentView(); // 수강생 관리
                 case 2 -> displayScoreView(); // 점수 관리
-                case 3 -> flag = false; // 프로그램 종료
+                case 3 -> displayStudentStateView(); // 수강생 상태 관리
+                case 4 -> flag = false; // 프로그램 종료
                 default -> {
                     System.out.println("잘못된 입력입니다.\n되돌아갑니다!");
                     Thread.sleep(2000);
@@ -141,6 +126,8 @@ public class CampManagementApplication {
         System.out.println("프로그램을 종료합니다.");
     }
 
+
+
     private static void displayStudentView() {
         boolean flag = true;
         while (flag) {
@@ -148,14 +135,16 @@ public class CampManagementApplication {
             System.out.println("수강생 관리 실행 중...");
             System.out.println("1. 수강생 등록");
             System.out.println("2. 수강생 목록 조회");
-            System.out.println("3. 메인 화면 이동");
+            System.out.println("3. 수강생 삭제");
+            System.out.println("4. 메인 화면 이동");
             System.out.print("관리 항목을 선택하세요...");
             int input = sc.nextInt();
 
             switch (input) {
                 case 1 -> createStudent(); // 수강생 등록
                 case 2 -> inquireStudent(); // 수강생 목록 조회
-                case 3 -> flag = false; // 메인 화면 이동
+                case 3 -> deleteStudent(); // 수강생 삭제
+                case 4 -> flag = false; // 메인 화면 이동
                 default -> {
                     System.out.println("잘못된 입력입니다.\n메인 화면 이동...");
                     flag = false;
@@ -167,20 +156,110 @@ public class CampManagementApplication {
     // 수강생 등록
     private static void createStudent() {
         System.out.println("\n수강생을 등록합니다...");
-        System.out.print("수강생 이름 입력: ");
-        String studentName = sc.next();
-        // 기능 구현 (필수 과목, 선택 과목)
 
-        Student student = new Student(sequence(INDEX_TYPE_STUDENT), studentName); // 수강생 인스턴스 생성 예시 코드
-        // 기능 구현
+        sc.nextLine();
+
+        // 수강생 이름
+        String studentName = getInput("수강생 이름 입력: ");
+
+        // 필수 과목 입력
+        List<Subject> mandatorySubjects = getSelectSubjects(SubjectType.MANDATORY,3, 5);
+        // 선택 과목 입력
+        List<Subject> choiceSubjects = getSelectSubjects(SubjectType.CHOICE, 2, 4);
+
+        // 수강생 인스턴스 생성 및 저장
+        System.out.println();
+        Student student = new Student(sequence(INDEX_TYPE_STUDENT), studentName, mandatorySubjects, choiceSubjects);
+        studentStore.add(student);
         System.out.println("수강생 등록 성공!\n");
+    }
+
+    // 과목 입력 메서드
+    private static List<Subject> getSelectSubjects(SubjectType type, int minRequired, int maxRequired) {
+        List<Subject> availableSubjects = getSubjectsByType(type);
+        List<Subject> selectedSubjects = new ArrayList<>();
+
+        while (true){
+            System.out.printf("%s(%s)을 입력해주세요.(최소 %d개, 최대 %d개)\n",type.getDescription(), String.join(", ", availableSubjects.stream().map(Subject::getSubjectName).toList()), minRequired, maxRequired);
+            String[] inputSubjects = getInput("").split(",");
+
+            selectedSubjects = getValidSubjects(availableSubjects, inputSubjects);
+
+            if (selectedSubjects.size() < minRequired)
+                System.out.printf("%s은 최소 %d개 이상 선택하야 합니다.\n", type.getDescription(), minRequired);
+            else if (selectedSubjects.size() > maxRequired) {
+                System.out.printf("%s은 최대 %d개까지 선택할 수 있습니다.\n", type.getDescription(), maxRequired);
+            }else {
+                break;
+            }
+        }
+
+        return selectedSubjects;
+    }
+
+
+
+    // 유효한 과목 리스트를 반환하는 메서드(중복 처리 추가)
+    private static List<Subject> getValidSubjects(List<Subject> availableSubjects, String[] inputSubjects) {
+        List<Subject> validSubjects = new ArrayList<>();
+        Set<String> uniqueInputs = new HashSet<>();
+
+        for (String input : inputSubjects) {
+            input = input.trim();
+            if (!uniqueInputs.add(input.toLowerCase())){
+                System.out.println("경고: "+input + "은(는) 중복 입력되어 한 번만 처리됩니다.");
+                continue;
+            }
+            for (Subject subject : availableSubjects) {
+                if (subject.getSubjectName().equalsIgnoreCase(input)) {
+                    validSubjects.add(subject);
+                    break;
+                }
+            }
+        }
+        return validSubjects;
+    }
+
+    // 주어진 타입의 과목 리스트를 반환하는 메서드
+    private static List<Subject> getSubjectsByType(SubjectType type) {
+        return subjectStore.stream()
+                .filter(subject -> subject.getSubjectType() == type)
+                .collect(Collectors.toList());
     }
 
     // 수강생 목록 조회
     private static void inquireStudent() {
         System.out.println("\n수강생 목록을 조회합니다...");
-        // 기능 구현
+        // 수강생 목록이 비어있는지 확인
+        if (studentStore.isEmpty()) {
+            System.out.println("등록된 수강생이 없습니다.");
+            return;
+        }
+        // 수강생 목록 출력
+        studentStore.forEach(System.out::println);
         System.out.println("\n수강생 목록 조회 성공!");
+    }
+
+    // 수강생 삭제
+    private static void deleteStudent() {
+        Student student = getStudentById();
+        if (student == null){
+            System.out.println("등록된 수강생이 없습니다.");
+            return;
+        }
+
+        System.out.println("다음 학생을 삭제하시겠습니까?");
+        System.out.println(student);
+        System.out.println("삭제하려면 'Y'를 입력하세요: ");
+        String confirm = sc.nextLine().trim().toUpperCase();
+
+        if (confirm.equals("Y")){
+            studentStore.remove(student);
+            // 관련된 점수 정보도 삭제
+            scoreStore.removeIf(score -> score.getStudentId().equals(student.getStudentId()));
+            System.out.println("학생 정보가 삭제되었습니다.");
+        }else
+            System.out.println("삭제가 취소되었습니다.");
     }
 
     private static void displayScoreView() {
@@ -213,62 +292,298 @@ public class CampManagementApplication {
         return sc.next();
     }
 
+    private static void displayStudentStateView() {
+        boolean flag = true;
+        while (flag){
+            System.out.println("==================================");
+            System.out.println("수강생 상태 관리 실행 중...");
+            System.out.println("1. 수강생 상태 변경");
+            System.out.println("2. 수강생 상태 조회");
+            System.out.println("3. 메인 화면 이동");
+            System.out.print("관리 항목을 선택하세요...");
+            int input = sc.nextInt();
+
+            switch (input){
+                case 1 -> changeStudentStatus();
+                case 2 -> inquireStudentStatus();
+                case 3 -> flag = false;
+                default -> {
+                    System.out.println("잘못된 입력입니다.\n 메인 화면 이동...");
+                    flag = false;
+                }
+            }
+        }
+    }
+
+    // 수강생 상태 변경
+    private static void changeStudentStatus() {
+        Student student = getStudentById();
+        if (student == null){
+            System.out.println("등록된 수강생이 없습니다.");
+            return;
+        }
+
+        System.out.println("변경할 상태를 선택하세요:");
+        System.out.println("1. GREEN (양호)");
+        System.out.println("2. YELLOW (주의)");
+        System.out.println("3. RED (위험)");
+        int statusChoice = getIntInput("선택: ",1,3);
+
+        StudentStatus newStatus;
+        switch (statusChoice){
+            case 1 -> newStatus = StudentStatus.GREEN;
+            case 2 -> newStatus = StudentStatus.YELLOW;
+            case 3 -> newStatus = StudentStatus.RED;
+            default -> {
+                System.out.println("잘못된 선택입니다.");
+                return;
+            }
+        }
+
+        student.setStatus(newStatus);
+        System.out.println("수강생 상태가 변경되었습니다 : "+ newStatus.getDescription());
+    }
+    // 수강생 상태 조회
+    private static void inquireStudentStatus() {
+        System.out.println("\n 수강생 상태를 조회합니다...");
+        if (studentStore.isEmpty()){
+            System.out.println("등록된 수강생이 없습니다.");
+            return;
+        }
+        for (Student student : studentStore){
+            System.out.println(student.getStudentId() + " - " + student.getStudentName() +
+                    ": " + student.getStatus().getDescription());
+        }
+        System.out.println("\n 수강생 상태 조회 완료!");
+    }
+
     // 수강생의 과목별 시험 회차 및 점수 등록
     private static void createScore() {
-        String studentId = getStudentId(); // 관리할 수강생 고유 번호
-        System.out.println("시험 점수를 등록합니다...");
-        // 기능 구현
-        System.out.println("\n점수 등록 성공!");
-    }
-
-    // 수강생의 과목별 회차 점수 수정
-    private static void updateRoundScoreBySubject() {
-        String studentId = getStudentId(); // 관리할 수강생 고유 번호
-        // 기능 구현 (수정할 과목 및 회차, 점수)
-        System.out.println("시험 점수를 수정합니다...");
-        // 기능 구현
-        System.out.println("\n점수 수정 성공!");
-    }
-
-    // 수강생의 특정 과목 회차별 등급 조회
-    private static void inquireRoundGradeBySubject() {
-        String studentId = getStudentId(); // 관리할 수강생 고유 번호
-<<<<<<< Updated upstream
-=======
-        Student student = findStudentById(studentId);
+        Student student = getStudentById();
         if (student == null) {
             System.out.println("등록된 수강생이 없습니다.");
             return;
         }
 
-        // 수강생의 과목 조회
-        getSubjects(studentId);
-        System.out.println();
+        Subject subject = getSubjectByName(student);
 
-        System.out.print("과목 이름을 입력하세요: ");
-        String subjectName = sc.next();
-        Subject subject = findSubjectByName(subjectName);
         if (subject == null) {
             System.out.println("등록된 과목이 없습니다.");
             return;
         }
-        
-        // 수강생의 회차 및 등급 조회
-        Map<Integer, String> grades = getGrades(studentId, subjectName);
-        if (grades != null) {
-            grades.forEach((round, grade) -> {
-                System.out.println(round + "회차| " + grade);
-            });
-        } else {
-            System.out.println("등록된 회차 별 등급이 없습니다");
+
+        if (!student.hasSubject(subject)){
+            System.out.println("이 학생은 해당 과목을 선택하지 않았습니다. 점수를 등록할 수 없습니다.");
             return;
         }
 
->>>>>>> Stashed changes
-        // 기능 구현 (조회할 특정 과목)
-        System.out.println("회차별 등급을 조회합니다...");
-        // 기능 구현
-        System.out.println("\n등급 조회 성공!");
+        int round = getIntInput("시험 회차를 입력하세요 (1-10): ",1, 10);
+        int score = getIntInput("점수를 입력하세요 (0-100): ",0, 100);
+
+        try {
+            Score scoreEntry = findOrCreateScore(student.getStudentId(), subject.getSubjectId());
+            scoreEntry.addScore(round, score);
+            System.out.println("점수 등록 성공!");
+        } catch (ScoreException e) {
+            System.out.println("점수 등록 실패: " + e.getMessage());
+        }
+    }
+
+
+    // 수강생 조회
+    private static Student findStudentById(String studentId) {
+        return studentStore.stream()
+                .filter(s -> s.getStudentId().equalsIgnoreCase(studentId))
+                .findFirst()
+                .orElse(null);
+    }
+
+    // 과목 조회
+    private static Subject findSubjectByName(String subjectName) {
+        for (Subject subject : subjectStore) {
+            if (subject.getSubjectName().equalsIgnoreCase(subjectName)) {
+                return subject;
+            }
+        }
+        return null;
+    }
+
+    // 입력된 과목을 찾고 점수 공간을 생성
+    private static Score findOrCreateScore(String studentId, String subjectId) {
+        Score scoreEntry = findScoreByStudentAndSubject(studentId, subjectId);
+        if (scoreEntry == null){
+            scoreEntry = new Score(sequence(INDEX_TYPE_SCORE), studentId, subjectId);
+            scoreStore.add(scoreEntry);
+        }
+        return scoreEntry;
+    }
+
+    // 점수 조회
+    private static Score findScoreByStudentAndSubject(String studentId, String subjectId) {
+        return scoreStore.stream()
+                .filter(s -> s.getStudentId().equalsIgnoreCase(studentId) && s.getSubjectId().equalsIgnoreCase(subjectId))
+                .findFirst()
+                .orElse(null);
+    }
+
+
+    // 수강생의 과목별 회차 점수 수정
+    private static void updateRoundScoreBySubject() {
+        Student student = getStudentById();
+
+        if (student == null){
+            System.out.println("해당 학생을 찾을 수 없습니다.");
+            return;
+        }
+
+
+        Subject subject = getSubjectByName(student);
+
+        if (subject == null) {
+            System.out.println("등록된 과목이 없습니다.");
+            return;
+        }
+
+        if (!student.hasSubject(subject)){
+            System.out.println("이 학생은 해당 과목을 선택하지 않았습니다. 점수를 수정할 수 없습니다.");
+            return;
+        }
+
+
+        int round = getIntInput("수정할 회차를 입력하세요:",1,10);
+
+        int newScore = getIntInput("새로운 점수를 입력하세요:",0,100);
+
+        try {
+            Score score = findScoreByStudentAndSubject(student.getStudentId(), subject.getSubjectId());
+            if (score == null){
+                System.out.println("해당 과목의 점수 정보를 찾을 수 없습니다.");
+                return;
+            }
+
+            score.updateScore(round, newScore);
+            System.out.println("점수가 성공적으로 수정되었습니다.");
+        }catch (ScoreException e){
+            System.out.println("점수 수정 중 오류 발생 : "+e.getMessage());
+        }
+    }
+
+    // 수강생 고유번호으로 학생 정보 불러오기
+    private static Student getStudentById() {
+        sc.nextLine();
+        String studentId = getInput("\n 관리할 수강생의 번호를 입력하세요."); // 관리할 수강생 고유 번호
+        Student student = findStudentById(studentId);
+
+        if (student == null)
+            System.out.println("해당 학생을 찾을 수 없습니다.");
+        return student;
+    }
+    //
+    private static Subject getSubjectByName(Student student) {
+        System.out.println("과목을 선택하세요:");
+        displaySubjects(student);
+        String subjectName = getInput("");
+        Subject subject = findSubjectByName(subjectName);
+        if (subject == null)
+            System.out.println("해당 과목을 찾을 수 없습니다.");
+        return subject;
+    }
+
+    // 수강생의 특정 과목 회차별 등급 조회
+    private static void inquireRoundGradeBySubject() {
+        Student student = getStudentById();
+        if (student == null) {
+            System.out.println("등록된 수강생이 없습니다.");
+            return;
+        }
+
+        Subject subject = getSubjectByName(student);
+        if (subject == null) {
+            System.out.println("등록된 과목이 없습니다.");
+            return;
+        }
+
+        // 수강생이 선택한 과목인지 확인
+        if (!student.hasSubject(subject)){
+            System.out.println("이 학생은 해당 과목을 선택하지 않았습니다. 점수를 등록할 수 없습니다.");
+            return;
+        }
+
+        Score score = findScoreByStudentAndSubject(student.getStudentId(), subject.getSubjectId());
+        if (score == null){
+            System.out.println("해당 학생의 해당 과목 점수를 찾을 수 없습니다.");
+            return;
+        }
+
+        // 수강생의 회차 및 등급 조회
+        Map<Integer, String> grades = getGrades(student.getStudentId(), subject.getSubjectId());
+        if(grades != null && !grades.isEmpty()){
+            grades.forEach((round,grade)->{
+                System.out.println(round+"회차| "+grade);
+            });
+            System.out.println("\n 등급 조회 성공");
+        }else{
+            System.out.println("등록된 회차 별 등급이 없습니다");
+        }
+    }
+    //회차별 등급 반환
+    private static Map<Integer,String> getGrades(String studentId, String subjectId){
+        for(Score score:scoreStore){
+            if(score.getStudentId().equalsIgnoreCase(studentId)&&score.getSubjectId().equalsIgnoreCase(subjectId)){
+                Map<Integer, String> grades = score.getGrades();
+                if (grades == null || grades.isEmpty()){
+                    System.out.println("등급이 계산되지 않았습니다. 점수 : "+ score.getScores());
+                }
+                return grades != null ? grades : null;
+            }
+        }
+        System.out.println("해당 학생의 해당 과목 점수를 찾을 수 없습니다.");
+        return null;
+    }
+    private static void getSubjects(String studentId){
+        for(Student student:studentStore){
+            if(student.getStudentId().equals(studentId)){
+                System.out.println(student);
+            }
+        }
+    }
+    //과목이름 -> 과목 아이디 반환
+    private static String getSubjectId(String subjectName){
+        for(Subject subject:subjectStore){
+            if(subject.getSubjectName().equalsIgnoreCase(subjectName)){
+                return subject.getSubjectId();
+            }
+        }
+        return null;
+    }
+
+    // 학생이 고른 필수 과목 목록과 선택 과목 목록 보여주는 메서드
+    private static void displaySubjects(Student student){
+        System.out.println("\n"+"필수 과목:");
+        student.getMandatorySubjects().forEach(s -> System.out.print(s.getSubjectName() + ", "));
+        System.out.println("\n"+"선택 과목:");
+        student.getChoiceSubjects().forEach(s -> System.out.print(s.getSubjectName() + ", "));
+        System.out.println();
+    }
+
+    // 이름, 과목 입력 처리 메서드
+    private static String getInput(String s) {
+        System.out.print(s);
+        return sc.nextLine().trim();
+    }
+
+    private static int getIntInput(String s, int min, int max) {
+        while (true){
+            try {
+                System.out.print(s);
+                int input = Integer.parseInt(sc.nextLine().trim());
+                if (input >= min && input <= max)
+                    return input;
+                System.out.printf("입력은 %d에서 %d 사이여야 합니다.", min, max);
+            }catch (NumberFormatException e){
+                System.out.println("올바른 숫자를 입력해주세요.");
+            }
+        }
     }
 
 }
